# pydoautomator

./: .deepsource.toml  .env.sh  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: codeql-analysis.yml  cz_bump.yaml  publish.yaml  unit_test.yaml
api_reference/: index.html
docs/: api_reference.md  getting_started.md  index.md
getting_started/: index.html
pydoautomator/: __init__.py  adapters.py  automator.py  droplet.py  errors.py
tests/behaver/features/: automate_assign_floating_ip.feature  automate_droplet_creation.feature  automate_droplet_destruction.feature  automate_droplet_turnoff.feature  environment.py
tests/behaver/features/steps/: automate_assign_floating_ip.py  automate_droplet_creation.py  automate_droplet_destruction.py  automate_droplet_turnoff.py
tests/test_data/: list_droplets_page_1.json  list_droplets_page_2.json  list_droplets_page_3.json
tests/unit_tdd/: api_mocks.py  helper.py  test_adapters.py  test_assign_floating_ip.py  test_automator.py  test_destroy_droplet.py  test_droplet_model.py  test_errors.py  test_get_all_droplets.py  test_package_basics.py  test_turnoff_droplet.py
whatever/: index.html
