[tool.poetry]
name = "pydoautomator"
version = "0.8.3"
description = "The Python lib for digital ocean automation"
authors = ["Christian Eland <eland.christian@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://pydoautomator.readthedocs.io"
homepage = "https://github.com/christian-hawk/pydoautomator"
repository = "https://github.com/christian-hawk/pydoautomator"
classifiers=[
        "Development Status :: 4 - Beta",
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
    ]


[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = "^1.6.1"
requests = "^2.24.0"
importlib-metadata = "^2.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pytest = "^6.1.1"
ipdb = "^0.13.4"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
responses = "^0.12.0"
autopep8 = "^1.5.4"
behave = "^1.2.6"
commitizen = "^2.4.2"
mkdocs = "^1.1.2"
mkdocstrings = "^0.13.6"
mkdocs-material = "^6.1.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.8.3"
tag_format = "$version"
version_files = [
    "pyproject.toml:version"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
